@@ -600,6 +600,9 @@ Release 2.8.0 - UNRELEASED
     core-default.xml to fit better in browser.
     (kanaka kumar avvaru via aajisaka)
 
+    HADOOP-11594. Improve the readability of site index of documentation.
+    (Masatake Iwasaki via aajisaka)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
